--- a/dsx/pubspec.yaml
+++ b/dsx/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_secure_storage: ^3.3.1
   json_annotation: ^2.0.0
   http: ^0.12.0
+  device_info: ^0.4.1
 
 dev_dependencies:
   flutter_test:
