--- a/dsx/pubspec.yaml
+++ b/dsx/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
   global_configuration: ^1.4.0
   flutter_secure_storage: ^3.3.1
   json_annotation: ^2.0.0
-  http: ^0.12.0
+  http: ^0.12.0+1
   device_info: ^0.4.1
 
 dev_dependencies:
