--- a/dsx/pubspec.yaml
+++ b/dsx/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   json_annotation: ^2.0.0
   http: ^0.12.0+1
   device_info: ^0.4.1
+  flushbar: ^1.9.1
+  jaguar_jwt: ^2.1.6
+  provider: ^4.0.1
 
 dev_dependencies:
   flutter_test:
