--- a/dsx/pubspec.yaml
+++ b/dsx/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flushbar: ^1.9.1
   jaguar_jwt: ^2.1.6
   provider: ^4.0.1
+  image_picker: ^0.6.3+1
 
 dev_dependencies:
   flutter_test:
