--- a/dsx/pubspec.yaml
+++ b/dsx/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   jaguar_jwt: ^2.1.6
   provider: ^4.0.1
   image_picker: ^0.6.3+1
+  pull_to_refresh: ^1.5.8
+  photo_view: ^0.9.1
 
 dev_dependencies:
   flutter_test:
