--- a/dsx/android/app/src/main/AndroidManifest.xml
+++ b/dsx/android/app/src/main/AndroidManifest.xml
@@ -32,4 +32,5 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.INTERNET"/>
 </manifest>
