--- a/dsx/android/app/src/main/AndroidManifest.xml
+++ b/dsx/android/app/src/main/AndroidManifest.xml
@@ -10,8 +10,8 @@
             android:name="io.flutter.app.FlutterApplication"
             android:label="dsx"
             android:allowBackup="false"
-            android:fullBackupContent="false">
-        android:icon="@mipmap/ic_launcher">
+            android:fullBackupContent="false"
+            android:icon="@mipmap/ic_launcher">
         <activity
                 android:name=".MainActivity"
                 android:launchMode="singleTop"
