--- a/dsx/pubspec.yaml
+++ b/dsx/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   cached_network_image: ^2.0.0
   image_cropper: ^1.2.0
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -33,6 +34,13 @@ dev_dependencies:
   build_runner: ^1.0.0
   json_serializable: ^2.0.0
   flutter_datetime_picker: 1.2.5
+  flutter_launcher_icons: "0.7.3"
+flutter_icons:
+    image_path: "assets/icon/icon.png"
+    android: true
+    ios: true
+
+
 
 flutter:
 
