--- a/dsx/pubspec.yaml
+++ b/dsx/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   photo_view: ^0.9.1
   cached_network_image: ^2.0.0
   image_cropper: ^1.2.0
-
+  marquee: ^1.3.1
 
 dev_dependencies:
   flutter_test:
